<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".activity.SignUpActivity">
    <View android:layout_width="match_parent"
          android:layout_weight="1"
          android:layout_height="0dp"/>
    <ImageView android:layout_width="match_parent"
               android:src="@drawable/fleeca_logo"
               android:layout_height="@dimen/user_img_size_xlarge"/>
    <View android:layout_width="match_parent"
          android:layout_weight="1"
          android:layout_height="0dp"/>
    <EditText android:layout_width="match_parent"
              android:hint="@string/full_name"
              android:padding="10dp"
              android:id="@+id/et_name"
              android:singleLine="true"
              android:textColor="@color/app_color"
              android:textSize="@dimen/font_12"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:background="@drawable/border"
              android:layout_height="wrap_content"/>
    <View android:layout_width="match_parent"
          android:layout_weight=".5"
          android:layout_height="0dp"/>
    <EditText android:layout_width="match_parent"
              android:hint="@string/email_id"
              android:padding="10dp"
              android:id="@+id/et_email"
              android:singleLine="true"
              android:textColor="@color/app_color"
              android:textSize="@dimen/font_12"
              android:inputType="textPassword"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:background="@drawable/border"
              android:layout_height="wrap_content"/>
    <View android:layout_width="match_parent"
          android:layout_weight=".5"
          android:layout_height="0dp"/>
    <EditText android:layout_width="match_parent"
              android:hint="@string/password"
              android:padding="10dp"
              android:id="@+id/et_password"
              android:singleLine="true"
              android:textColor="@color/app_color"
              android:textSize="@dimen/font_12"
              android:inputType="textPassword"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:background="@drawable/border"
              android:layout_height="wrap_content"/>
    <View android:layout_width="match_parent"
          android:layout_weight=".5"
          android:layout_height="0dp"/>

    <TextView android:layout_width="match_parent"
              android:text="@string/signup"
              android:id="@+id/txt_signup"
              android:layout_gravity="center"
              android:gravity="center"
              android:textSize="@dimen/font_14"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:padding="10dp"
              android:background="@drawable/login_selected"
              android:textColor="@android:color/white"
              android:layout_height="wrap_content"/>
    <View android:layout_width="match_parent"
          android:layout_weight=".5"
          android:layout_height="0dp"/>

    <View android:layout_width="match_parent"
          android:layout_weight=".5"
          android:layout_height="0dp"/>
    <View android:layout_width="match_parent"
          android:layout_weight="1"
          android:layout_height="0dp"/>

    <TextView android:layout_width="match_parent"
              android:layout_gravity="center"
              android:gravity="center"
              android:padding="5dp"
              android:id="@+id/txt_signin"
              android:textColor="@color/app_color"
              android:clickable="true"
              android:background="?android:selectableItemBackground"
              android:textSize="@dimen/font_12"
              android:text="@string/Have_account_sign_up"
              android:layout_height="wrap_content"/>
    <View android:layout_width="match_parent"
          android:layout_weight=".5"
          android:layout_height="0dp"/>

</LinearLayout>